// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Button should do a snapshot test of the default Button DOM 1`] = `
<button
  className=" rogu-button  rogu-button--primary rogu-button--big"
  disabled={false}
  onClick={[Function]}
  type="button"
>
  <span
    className="rogu-button__text sendbird-label rogu-label--body-3 sendbird-label--color-oncontent-1"
  >
    Button
  </span>
</button>
`;

exports[`Button should do a snapshot test of the small Button DOM 1`] = `
<button
  className=" rogu-button  rogu-button--primary rogu-button--small"
  disabled={false}
  onClick={[Function]}
  type="button"
>
  <span
    className="rogu-button__text sendbird-label rogu-label--body-3 sendbird-label--color-oncontent-1"
  >
    Button
  </span>
</button>
`;
